k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 450444046629.dkr.ecr.ap-southeast-1.amazonaws.com/user15-petclinic:v11
        ports:
        - containerPort: 8080
